# redis-macros

./: .gitignore  Cargo.toml  Changelog.md  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: integration.yml  publish.yml  test.yml
examples/: derive_async.rs  derive_basic.rs  derive_deadpool.rs  derive_generic.rs  derive_redisjson.rs  derive_yaml.rs  json_wrapper.rs  json_wrapper_basic.rs  json_wrapper_modify.rs
macros/: Cargo.toml
macros/src/: lib.rs
redis-macros-derive/: Cargo.toml  README.md
redis-macros-derive/src/: lib.rs
src/: json.rs  lib.rs
tests/: derive_from_redis_value.rs  derive_from_redis_value_redis_yaml.rs  derive_to_redis_args.rs  derive_to_redis_args_redis_yaml.rs  derive_with_multiple_generics.rs  json_wrapper.rs
