[package]
name = "redis-macros"
version = "0.1.0"
edition = "2021"

[dependencies]
macros = { path = "./macros", optional = true }
redis = { version = "0.22.2", optional = true }
serde = { version = "1.0.152", features = ["derive"], optional = true }
serde_json = { version = "1.0.91", optional = true }

[features]
default = ["json", "macros"]
json = ["dep:redis", "dep:serde", "dep:serde_json"]
macros = ["dep:macros"]

[dev-dependencies]
redis = { version = "0.22.2", features = ["tokio-comp", "json"] }
serde_yaml = "0.9.16"
tokio = { version = "1.24.1", features = ["full"] }
