[package]
name = "redis-macros"
description = "Simple macros and wrappers to redis-rs to automatically serialize and deserialize structs with serde."
version = "0.5.0"
edition = "2021"
authors = ["Daniel Grant"]
readme = "README.md"
homepage = "https://github.com/daniel7grant/redis-macros"
repository = "https://github.com/daniel7grant/redis-macros"
license = "MIT"
keywords = ["redis", "macro", "derive", "json"]

[dependencies]
redis = { version = "0.28", optional = true }
redis-macros-derive = { version = "0.5", optional = true, path = "./redis-macros-derive" }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["json", "macros"]
json = ["dep:redis", "dep:serde", "dep:serde_json"]
macros = ["dep:redis-macros-derive"]

[dev-dependencies]
deadpool-redis = { version = "0.18" }
redis = { version = "0.28", features = ["tokio-comp", "json"] }
serde_yaml = "0.9"
tokio = { version = "1.41", features = ["full"] }
