[package]
name = "redis-macros-derive"
description = "Derive macros for the redis-macros package"
version = "0.5.0"
edition = "2021"
authors = ["Daniel Grant"]
readme = "README.md"
homepage = "https://github.com/daniel7grant/redis-macros"
repository = "https://github.com/daniel7grant/redis-macros"
license = "MIT"
keywords = ["redis", "macro", "derive", "json"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0" }

[dev-dependencies]
redis = { version = "0.28", features = ["tokio-comp", "json"] }
redis-macros = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = "0.9"
